[workspace]

resolver = "2"

members = [
    "base",
    "miner",
    "validator",
]

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
anyhow = "1.0.91"
threadpool = "1.8.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"

opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26.0"

tokio = { version = "1.41.0", features = ["full"] }
