[workspace]

resolver = "2"

members = [
    "base",
    "miner",
    "validator",
]

[workspace.dependencies]
opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26.0"

rusttensor = { git = "https://github.com/womboai/rusttensor", tag = "v0.3.0" }
subxt = "0.38.0"
jsonrpsee = "0.24.7"

tracing = "0.1.40"
dirs = "5.0.1"
anyhow = "1.0.91"
threadpool = "1.8.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0.65"

tokio = { version = "1.41.0", features = ["full"] }
