[package]
name = "rule-30-solver-neuron"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "neuron"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }

parity-scale-codec = "3.0.0"
subxt = { version = "0.38.0", features = ["jsonrpsee", "substrate-compat"] }
hex = "0.4.3"

[build-dependencies]
subxt-codegen = "0.38.0"
subxt-metadata = "0.38.0"
subxt-utils-fetchmetadata = {version = "0.38.0", features = ["url"]}
parity-scale-codec = "3.0.0"
tokio = { workspace = true }
