[package]
name = "rule-30-solver-neuron"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "neuron"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }

tracing-subscriber = "0.3.18"

rusttensor = { workspace = true }

opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26.0"
