[package]
name = "pyramid-scheme-neuron"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "neuron"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }

thiserror = { workspace = true }

rusttensor = { workspace = true }

tracing-subscriber = "0.3.18"

dotenv = "0.15.0"

opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.26.0"
