[package]
name = "rule-30-solver-miner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miner"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

threadpool = { workspace = true }

rule-30-solver-neuron = { path = "../base" }
