[package]
name = "pyramid-scheme-miner"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "miner"
path = "src/main.rs"

[[bin]]
name = "serve-axon"
path = "src/serve_axon.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }

threadpool = { workspace = true }

thiserror = { workspace = true }

rusttensor = { workspace = true }

clap = { version = "4.5.20", features = ["derive"] }

pyramid-scheme-neuron = { path = "../base" }

[dev-dependencies]
num-bigint = "0.4.6"
