[package]
name = "rule-30-solver-validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }

tracing = { workspace = true }

threadpool = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

dotenv = { workspace = true }

thiserror = { workspace = true }

rusttensor = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

memmap2 = "0.9.5"
axum = "0.7.7"
axum-extra = "0.9.4"
axum-range = "0.4.0"
axum-debug-macros = "0.1.0"

rule-30-solver-neuron = { path = "../base" }
