[package]
name = "pyramid-scheme-validator"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "validator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

dirs = { workspace = true }

tracing = { workspace = true }

threadpool = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }

rusttensor = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

priority-queue = "2.1.1"
memmap2 = "0.9.5"
axum = "0.7.7"
axum-extra = "0.9.4"
axum-range = "0.4.0"
axum-debug-macros = "0.1.0"

pyramid-scheme-neuron = { path = "../base" }
